removed videofiles etc

--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
         rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Fascinate+Inline" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Catamaran:900|Coda:800|Faster+One|Open+Sans|PT+Serif:700|Poller+One|Titillium+Web:900" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css?family=Catamaran:900|Coda:800|Faster+One|Open+Sans|PT+Serif:700|Poller+One|Titillium+Web:900"
+        rel="stylesheet">
 
-    <link rel="stylesheet" href="/sass/main.css">
+    <link rel="stylesheet" href="sass/main.css">
 
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
@@ -22,23 +23,23 @@
 
 <body>
 
-    <script type="text/javascript" src="/js/opacityOnScroll.js"></script>
-    <script type="text/javascript" src="/js/main.js"></script>
+    <script type="text/javascript" src="js/opacityOnScroll.js"></script>
+    <script type="text/javascript" src="js/main.js"></script>
 
     <div class="container">
 
-        <header class="header_landing">
+        <header class="header_landing stick">
             <div class="header_landing_grid">
-                <video class="header_landing_video" muted loop src="video/placeholder/Bumper-Cars.mp4"></video>
-                <img src="/img/skull_8441.jpg" alt="" class="header_landing_img--1">
-                <img src="/img/bar-side_8380.jpg" alt="" class="header_landing_img--2">
-                <img src="/img/familien-far-sønn_8433.jpg" alt="" class="header_landing_img--3">
+                <video class="header_landing_video" autoplay muted loop src="video/placeholder/Orchestra.mp4"></video>
+                <img src="img/aarum-2_8424.jpg" alt="" class="header_landing_img--1">
+                <img src="img/bar-side_8380.jpg" alt="" class="header_landing_img--2">
+                <img src="img/familien-far-sønn_8433.jpg" alt="" class="header_landing_img--3">
             </div>
             <div class="header_landing_text">
                 <h1 class="header_landing_text_headline headline--xl">
                     Headline Headline
                 </h1>
-                <h2 class="header_landing_text_subtitle headline--m">
+                <h2 class="header_landing_text_subtitle headline--s">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit.
                 </h2>
             </div>
@@ -47,22 +48,20 @@
         <div class="introduction bg-white">
             <p class="introduction_text text--m">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio dolores impedit tempora repudiandae
-                aliquam molestiae repellendus, deserunt at id porro molestias. Aspernatur vero quas eveniet molestiae
-                quaerat magnam recusandae repellat?
+                aliquam molestiae repellendus, deserunt at id porro molestias. 
             </p>
             <p class="introduction_text text--m">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio dolores impedit tempora repudiandae
-                aliquam molestiae repellendus, deserunt at id porro molestias. Aspernatur vero quas eveniet molestiae
-                quaerat magnam recusandae repellat?
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. 
             </p>
-
         </div>
 
         <div class="multimedia-f">
-            <div class="multimedia-f_text text--s">
+            <div class="multimedia-f_text text--s  bg-black">
                 <p class="multimedia-f_text_p text--m">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio dolores impedit tempora
                     repudiandae
+                </p>
+                <p class="multimedia-f_text_p">
                     aliquam molestiae repellendus, deserunt at id porro molestias. Aspernatur vero quas eveniet
                     molestiae
                     quaerat magnam recusandae repellat?
@@ -70,16 +69,6 @@
                 <p class="multimedia-f_text_p">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio dolores impedit tempora
                     repudiandae
-                    aliquam molestiae repellendus, deserunt at id porro molestias. Aspernatur vero quas eveniet
-                    molestiae
-                    quaerat magnam recusandae repellat?
-                </p>
-                <p class="multimedia-f_text_p">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio dolores impedit tempora
-                    repudiandae
-                    aliquam molestiae repellendus, deserunt at id porro molestias. Aspernatur vero quas eveniet
-                    molestiae
-                    quaerat magnam recusandae repellat?
                 </p>
             </div>
         </div>
@@ -87,7 +76,7 @@
         <div class="multimedia-a bg-white">
             <div class="multimedia-a_media">
                 <picture class="multimedia-a_media_img--1">
-                    <img class="border-white" src="/img/nils-petter-nilsen_8464.jpg" alt="">
+                    <img class="border-white" src="img/nils-petter-nilsen_8464.jpg" alt="">
                 </picture>
                 <picture class="multimedia-a_media_img--2">
                     <img class="border-white" src="img/nils-petter-nilsen-bak_8459.jpg" alt="">
@@ -116,38 +105,17 @@
                     molestiae
                     quaerat magnam recusandae repellat?
                 </p>
-                <p class="multimedia-a_text_p">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio dolores impedit tempora
-                    repudiandae
-                    aliquam molestiae repellendus, deserunt at id porro molestias. Aspernatur vero quas eveniet
-                    molestiae
-                    quaerat magnam recusandae repellat?
-                </p>
-                <p class="multimedia-a_text_p">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio dolores impedit tempora
-                    repudiandae
-                    aliquam molestiae repellendus, deserunt at id porro molestias. Aspernatur vero quas eveniet
-                    molestiae
-                    quaerat magnam recusandae repellat?
-                </p>
-                <p class="multimedia-a_text_p">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio dolores impedit tempora
-                    repudiandae
-                    aliquam molestiae repellendus, deserunt at id porro molestias. Aspernatur vero quas eveniet
-                    molestiae
-                    quaerat magnam recusandae repellat?
-                </p>
             </div>
         </div>
 
         <div class="video-a">
-            <video src="video/placeholder/Rainy_Street.mp4" controls>
+            <video src="video/placeholder/Orchestra.mp4" controls>
                 <source src="movie.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
         </div>
 
-       <!-- <div class="image-grid-b">
+        <!-- <div class="image-grid-b">
             <div class="image-grid-b_media">
                 <picture class="image-grid-b_media_img--1">
                     <img src="img/placeholder/cafe-1.jpg" alt="">
@@ -192,22 +160,15 @@
                     molestiae
                     quaerat magnam recusandae repellat?
                 </p>
-                <p class="multimedia-c_text_p">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio dolores impedit tempora
-                    repudiandae
-                    aliquam molestiae repellendus, deserunt at id porro molestias. Aspernatur vero quas eveniet
-                    molestiae
-                    quaerat magnam recusandae repellat?
-                </p>
             </div>
         </div>
 
         <div class="multimedia-b">
-                <div class="multimedia-b_excerpt quote--m">
-                        <p class="multimedia-b_excerpt_p">
-                            &laquo; Lorem ipsum dolor sit amet consectetur adipisicing elit &raquo;</p>
-                    </div>
-            <div class="multimedia-b_text text--s">
+            <div class="multimedia-b_excerpt quote--m">
+                <p class="multimedia-b_excerpt_p">
+                    &laquo; Lorem ipsum dolor sit amet consectetur adipisicing elit &raquo;</p>
+            </div>
+            <div class="multimedia-b_text text--s bg-black">
                 <h1 class="multimedia-b_text_headline headline--m">Headline</h1>
                 <p class="multimedia-b_text_p">
                     <p class="multimedia-b_text_p">
@@ -233,7 +194,6 @@
                     </p>
                 </p>
             </div>
-            
         </div>
 
         <div class="text-a bg-white">
@@ -269,26 +229,24 @@
                     molestiae
                     quaerat magnam recusandae repellat?
                 </p>
-                <p class="text-a_text_p">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio dolores impedit tempora
-                    repudiandae
-                    aliquam molestiae repellendus, deserunt at id porro molestias. Aspernatur vero quas eveniet
-                    molestiae
-                    quaerat magnam recusandae repellat?
-                </p>
             </div>
         </div>
 
         <div class="multimedia-d">
             <div class="multimedia-d_media">
                 <picture class="multimedia-d_media_img--1">
-                    <img class="border-white" src="/img/familien-far-sønn_8433.jpg" alt="">
+                    <img class="border-white" src="img/familien-far-sønn_8433.jpg" alt="">
                 </picture>
                 <picture class="multimedia-d_media_img--2">
                     <img class="border-white" src="img/familien_8429.jpg" alt="">
                 </picture>
+
+                <div class="multimedia-d_excerpt quote--m">
+                    <p class="multimedia-d_excerpt_p">
+                        &laquo; Lorem ipsum dolor sit amet consectetur adipisicing elit &raquo;</p>
+                </div>
             </div>
-            <div class="multimedia-d_text bg-white text--s">
+            <div class="multimedia-d_text bg-black text--s">
                 <h1 class="multimedia-d_text_p headline--m">Headline</h1>
                 <p class="multimedia-d_text_p">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio dolores impedit tempora
@@ -311,10 +269,6 @@
                     molestiae
                     quaerat magnam recusandae repellat?
                 </p>
-                <div class="multimedia-d_excerpt quote--m">
-                    <p class="multimedia-d_excerpt_p">
-                        &laquo; Lorem ipsum dolor sit amet consectetur adipisicing elit &raquo;</p>
-                </div>
 
             </div>
         </div>
@@ -346,21 +300,24 @@
             </div>
             <div class="multimedia-e_media">
                 <picture class="multimedia-e_media_image slides fade">
-                    <img src="img/magasiner_8395.jpg" alt="">
+                    <img src="img/foto-vinner-closeup_8452.jpg" alt="">
                 </picture>
                 <picture class="multimedia-e_media_image slides fade">
-                    <img src="img/scene-closeup_8386.jpg" alt="">
+                    <img src="img/foto-vinner-svein.jpg" alt="">
                 </picture>
                 <picture class="multimedia-e_media_image slides fade">
-                    <img src="img/bar-mat_8427.jpg" alt="">
+                    <img src="img/felger-vegg_8384.jpg" alt="">
                 </picture>
 
+                <div class="number">
+                    1/2
+                </div>
                 <a class="next" onclick="plusSlides(1)">&#10095;</a>
             </div>
         </div>
 
 
-        <div class="image-grid-b">
+       <!-- <div class="image-grid-b">
             <div class="image-grid-b_media">
                 <picture class="image-grid-b_media_img--1">
                     <img src="img/placeholder/cafe-1.jpg" alt="">
@@ -378,22 +335,27 @@
                 <picture class="image-grid-b_media_img--7">
                     <img src="img/placeholder/tools.jpg" alt=""></picture>
             </div>
-        </div>
+        </div>-->
 
         <div class="img-b">
-
+            <h1 class="img-b_headline headline--l">Headline</h1>
         </div>
 
-
-
-
-
-        <div class="img-a">
-
+        <div class="text-a bg-white">
+            <div class="text-a_text text--s">
+                <h1 class="headline--s">Headline</h1>
+                <p class="text-a_text_p">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio dolores impedit tempora
+                    repudiandae
+                    aliquam molestiae repellendus, deserunt at id porro molestias. Aspernatur vero quas eveniet
+                    molestiae
+                    quaerat magnam recusandae repellat?
+                </p>
+            </div>
         </div>
 
         <div class="dv-small-a">
-            <div class="dv-small-a_text text--s">
+            <div class="dv-small-a_text text--s bg-black">
                 <h1 class="dv-small-a_text_headline headline--m">HEADLINE</h1>
                 <p class="dv-small-a_text_p">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Similique
                     ratione dolorem maxime ipsa facere repellendus distinctio pariatur necessitatibus velit iure, quia
@@ -403,6 +365,9 @@
                     amet ducimus cumque quam a officiis eum iusto reprehenderit!</p>
             </div>
             <div class="dv-small-a_data">
+                <div class="dv-small-a_data_number">
+                    72
+                </div>
 
             </div>
         </div>
@@ -471,7 +436,8 @@
             </div>
         </div>
 
-    </div><script type="text/javascript" src="/js/main.js"></script>
+    </div>
+    <script type="text/javascript" src="/js/main.js"></script>
 </body>
 
 </html>
