--- a/index.html
+++ b/index.html
@@ -307,11 +307,11 @@
                     <picture class="multimedia-e_media_image slides fade">
                         <img src="img/felger-vegg_8384.jpg" alt="">
                     </picture>
-
+<!--  
                     <div class="number">
-                        1/2
+                     1/2
                     </div>
-                    <a class="next" onclick="plusSlides(1)">&#10095;</a>
+                    <a class="next" onclick="plusSlides(1)">&#10095;</a>--> 
                 </div>
             </div>
 
@@ -339,10 +339,16 @@
         </div>
 
         <div class="multimedia-scroll" id="multimedia-scroll">
-            <div class="multimedia-scroll_media ease" id="img-1">
-                <div class="multimedia-scroll_media_test" id="img-2"></div>
-                <div class="multimedia-scroll_media_test" id="img-3"></div>
-                <div class="multimedia-scroll_media_test" id="img-4"></div>
+            <div class="multimedia-scroll_media ease" id="multimedia-scroll_media">
+                <div class="multimedia-scroll_media_img--1" id="img-1">
+                    <img src="img/kart-closeup_8416.jpg" alt="">
+                </div>
+                <div class="multimedia-scroll_media_img--2" id="img-2">
+                    <img src="img/jukebox-sanger_8446.jpg" alt="">
+                </div>
+                <div class="multimedia-scroll_media_img--3" id="img-3">
+                    <img src="img/felger-vegg_8384.jpg" alt="">
+                </div>
             </div>
 
             <div class="multimedia-scroll_text text--m">
@@ -466,7 +472,6 @@
         </div>
 
     </div>
-    <script type="text/javascript" src="js/opacityOnScroll.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
 </body>
 
