--- a/index.html
+++ b/index.html
@@ -6,27 +6,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <link href="https://fonts.googleapis.com/css?family=Anton|Archivo+Black|Montserrat|News+Cycle|Open+Sans|Oswald:200,400,600,700|Roboto:100,300,400,700,900,900i|Roboto+Slab"
-        rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Fascinate+Inline" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Playfair+Display" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Catamaran:900|Coda:800|Faster+One|Open+Sans|PT+Serif:700|Poller+One|Titillium+Web:900"
+    <link href="https://fonts.googleapis.com/css?family=Anton|Open+Sans|Oswald:200,400,600,700|Roboto:100,300,400,700,900,900i|Roboto+Slab"
         rel="stylesheet">
 
     <link rel="stylesheet" href="sass/main.css">
 
-
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
 
-    <title>Document</title>
+    <title>TODO</title>
+
 </head>
 
 <body>
 
+    <script>
+        window.onload = function load() {
+            document.getElementsByClassName('page-loader')[0].style.display = "none";
+        };
+    </script>
+
     <div class="container">
 
-        <div class="scroll-helper" id="scroll-helper">
+        <div class="page-loader">
 
+        </div>
+
+        <div class="scroll-helper" id="scroll-helper">
             <header class="header_landing" id="header_landing">
                 <div class="header_landing_grid" id="header_landing_grid">
                     <video class="header_landing_video" autoplay muted loop src="video/placeholder/Orchestra.mp4"></video>
@@ -54,7 +59,7 @@
                 </p>
             </div>
 
-            <div class="multimedia-f">
+            <div class="multimedia-f fill-page">
                 <div class="multimedia-f_text text--s  bg-black">
                     <p class="multimedia-f_text_p text--m">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio dolores impedit tempora
@@ -72,7 +77,7 @@
                 </div>
             </div>
 
-            <div class="multimedia-a bg-white">
+            <div class="multimedia-a bg-white fill-page">
                 <div class="multimedia-a_media">
                     <picture class="multimedia-a_media_img--1">
                         <img class="border-white" src="img/nils-petter-nilsen_8464.jpg" alt="">
@@ -138,7 +143,7 @@
 
         </div>-->
 
-            <div class="multimedia-c bg-white">
+            <div class="multimedia-c bg-white fill-page">
                 <div class="multimedia-c_media">
                     <picture class="multimedia-c_media_image">
                         <img class="border-white" src="img/damer-bar_8454.jpg" alt="">
@@ -162,7 +167,7 @@
                 </div>
             </div>
 
-            <div class="multimedia-b">
+            <div class="multimedia-b fill-page">
                 <div class="multimedia-b_excerpt quote--m">
                     <p class="multimedia-b_excerpt_p">
                         &laquo; Lorem ipsum dolor sit amet consectetur adipisicing elit &raquo;</p>
@@ -231,7 +236,7 @@
                 </div>
             </div>
 
-            <div class="multimedia-d">
+            <div class="multimedia-d  fill-page">
                 <div class="multimedia-d_media">
                     <picture class="multimedia-d_media_img--1">
                         <img class="border-white" src="img/familien-far-sønn_8433.jpg" alt="">
@@ -273,7 +278,7 @@
             </div>
 
 
-            <div class="multimedia-e bg-white zindex">
+            <div class="multimedia-e bg-white zindex  fill-page">
                 <div class="multimedia-e_text text--s">
                     <p class="multimedia-e_text_p">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio dolores impedit tempora
@@ -307,11 +312,11 @@
                     <picture class="multimedia-e_media_image slides fade">
                         <img src="img/felger-vegg_8384.jpg" alt="">
                     </picture>
-<!--  
+                    
                     <div class="number">
                      1/2
                     </div>
-                    <a class="next" onclick="plusSlides(1)">&#10095;</a>--> 
+                    <a class="next" onclick="plusSlides(1)">&#10095;</a>
                 </div>
             </div>
 
@@ -347,7 +352,7 @@
                     <img src="img/jukebox-sanger_8446.jpg" alt="">
                 </div>
                 <div class="multimedia-scroll_media_img--3" id="img-3">
-                    <img src="img/felger-vegg_8384.jpg" alt="">
+                    <img src="img/placeholder/kart.png" alt="">
                 </div>
             </div>
 
@@ -422,7 +427,17 @@
         -->
 
         <div class="dv-big-a zindex">
-            <div class="div-big-a_map"></div>
+            <div class="div-big-a_map" id="googleMap" style="width:100%; height:400px;">
+                <script>
+                    function myMap() {
+                        var mapProp = {
+                            center: new google.maps.LatLng(51.508742, -0.120850),
+                            zoom: 15,
+                        };
+                        var map = new google.maps.Map(document.getElementById("googleMap"), mapProp);
+                    }
+                </script>
+            </div>
         </div>
 
 
@@ -472,6 +487,10 @@
         </div>
 
     </div>
+
+
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAcpp_Alc9pjgyaMdWw03-gP6ekLWYifMw&callback=myMap"></script>
+
     <script type="text/javascript" src="js/main.js"></script>
 </body>
 
