scrollevent funker + nye bilder

--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
                 </div>
             </div>
 
-            <div class="multimedia-d  fill-page">
+            <div class="multimedia-d fill-page zindex">
                 <div class="multimedia-d_media">
                     <picture class="multimedia-d_media_img--1">
                         <img class="border-white" src="img/familien-far-sønn_8433.jpg" alt="">
@@ -302,19 +302,19 @@
                         quaerat magnam recusandae repellat?
                     </p>
                 </div>
-                <div class="multimedia-e_media ">
-                    <picture class="multimedia-e_media_image slides fade">
+                <div class="multimedia-e_media">
+                    <picture class="multimedia-e_media_image slides">
                         <img src="img/foto-vinner-closeup_8452.jpg" alt="">
                     </picture>
-                    <picture class="multimedia-e_media_image slides fade">
+                    <picture class="multimedia-e_media_image slides">
                         <img src="img/foto-vinner-svein.jpg" alt="">
                     </picture>
-                    <picture class="multimedia-e_media_image slides fade">
-                        <img src="img/felger-vegg_8384.jpg" alt="">
+                    <picture class="multimedia-e_media_image slides">
+                        <img src="img/foto-vinner-2_8450.jpg" alt="">
                     </picture>
-                    
+
                     <div class="number">
-                     1/2
+                        1/2
                     </div>
                     <a class="next" onclick="plusSlides(1)">&#10095;</a>
                 </div>
@@ -345,14 +345,14 @@
 
         <div class="multimedia-scroll" id="multimedia-scroll">
             <div class="multimedia-scroll_media ease" id="multimedia-scroll_media">
-                <div class="multimedia-scroll_media_img--1" id="img-1">
-                    <img src="img/kart-closeup_8416.jpg" alt="">
-                </div>
-                <div class="multimedia-scroll_media_img--2" id="img-2">
-                    <img src="img/jukebox-sanger_8446.jpg" alt="">
-                </div>
-                <div class="multimedia-scroll_media_img--3" id="img-3">
+                <div class="multimedia-scroll_media_img--1 fade-out sticky ease" id="img-1">
                     <img src="img/placeholder/kart.png" alt="">
+                </div>
+                <div class="multimedia-scroll_media_img--2 fade-out sticky ease" id="img-2">
+                    <img src="img/placeholder/landssnitt7.png" alt="">
+                </div>
+                <div class="multimedia-scroll_media_img--3 fade-out sticky ease" id="img-3">
+                    <img src="img/placeholder/landssoyle.png" alt="">
                 </div>
             </div>
 
@@ -363,15 +363,15 @@
                 </div>
 
                 <div class="multimedia-scroll_text_quoteblock">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 1</p>
                 </div>
 
                 <div class="multimedia-scroll_text_quoteblock">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 2</p>
                 </div>
 
                 <div class="multimedia-scroll_text_quoteblock">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 3</p>
                 </div>
             </div>
 
@@ -460,37 +460,33 @@
                     <img src="img/bar-mat_8427.jpg" alt="">
                 </picture>
                 <picture class="image-grid-a_media_img--2">
-                    <img src="img/placeholder/car-bmw.jpg" alt=""></picture>
+                    <img src="img/jukebox-sanger_8446.jpg" alt=""></picture>
                 <picture class="image-grid-a_media_img--3">
-                    <img src="img/placeholder/car-interior.jpg" alt=""></picture>
+                    <img src="img/diner-flagg_8421.jpg" alt=""></picture>
                 <picture class="image-grid-a_media_img--4">
                     <img src="img/foto-vinner-svein.jpg" alt=""></picture>
-                <picture class="image-grid-a_media_img--5">
-                    <img src="img/placeholder/license-plate.jpg" alt=""></picture>
                 <picture class="image-grid-a_media_img--6">
-                    <img src="img/placeholder/man-closeup.jpg" alt=""></picture>
+                    <img src="img/familien-far_8431.jpg" alt=""></picture>
                 <picture class="image-grid-a_media_img--7">
-                    <img src="img/placeholder/tools.jpg" alt=""></picture>
+                    <img src="img/jukebox_8391.jpg" alt=""></picture>
                 <picture class="image-grid-a_media_img--8">
-                    <img src="img/felger-vegg-2_8385.jpg" alt=""></picture>
+                    <img src="img/magasiner_8395.jpg" alt=""></picture>
                 <picture class="image-grid-a_media_img--9">
-                    <img src="img/jukebox-sanger_8446.jpg" alt=""></picture>
+                    <img src="img/felger-vegg-2_8385.jpg" alt=""></picture>
                 <picture class="image-grid-a_media_img--10">
                     <img src="img/familien-2_8432.jpg" alt=""></picture>
                 <picture class="image-grid-a_media_img--11">
-                    <img src="img/placeholder/engine.jpg" alt=""></picture>
+                    <img src="img/felger-vegg-2_8385.jpg" alt=""></picture>
                 <picture class="image-grid-a_media_img--12">
-                    <img src="img/placeholder/two-men.jpg" alt=""></picture>
+                    <img src="img/diner-flagg_8421.jpg" alt=""></picture>
                 <picture class="image-grid-a_media_img--13">
-                    <img src="img/placeholder/food.jpg" alt=""></picture>
+                    <img src="img/diner-tom_8387.jpg" alt=""></picture>
             </div>
         </div>
 
     </div>
 
-
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAcpp_Alc9pjgyaMdWw03-gP6ekLWYifMw&callback=myMap"></script>
-
     <script type="text/javascript" src="js/main.js"></script>
 </body>
 
