nye bilder + klar til levering 2

--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
             <header class="header_landing" id="header_landing">
                 <div class="header_landing_grid" id="header_landing_grid">
                     <video class="header_landing_video" autoplay muted loop src="video/placeholder/Orchestra.mp4"></video>
-                    <img src="img/aarum-2_8424.jpg" alt="" class="header_landing_img--1">
-                    <img src="img/bar-side_8380.jpg" alt="" class="header_landing_img--2">
-                    <img src="img/familien-far-sønn_8433.jpg" alt="" class="header_landing_img--3">
+                    <img src="img/mod/aarum.jpg" alt="" class="header_landing_img--1">
+                    <img src="img/mod/bar-front.jpg" alt="" class="header_landing_img--2">
+                    <img src="img/mod/familien-2.jpg" alt="" class="header_landing_img--3">
                 </div>
                 <div class="header_landing_text">
                     <h1 class="header_landing_text_headline headline--xl">
@@ -80,10 +80,10 @@
             <div class="multimedia-a bg-white fill-page">
                 <div class="multimedia-a_media">
                     <picture class="multimedia-a_media_img--1">
-                        <img class="border-white" src="img/nils-petter-nilsen_8464.jpg" alt="">
+                        <img class="border-white" src="img/mod/nils-petter.jpg" alt="">
                     </picture>
                     <picture class="multimedia-a_media_img--2">
-                        <img class="border-white" src="img/nils-petter-nilsen-bak_8459.jpg" alt="">
+                        <img class="border-white" src="img/mod/nils-petter-bak.jpg" alt="">
                     </picture>
                 </div>
                 <div class="multimedia-a_text text--s">
@@ -239,10 +239,10 @@
             <div class="multimedia-d fill-page zindex">
                 <div class="multimedia-d_media">
                     <picture class="multimedia-d_media_img--1">
-                        <img class="border-white" src="img/familien-far-sønn_8433.jpg" alt="">
+                        <img class="border-white" src="img/mod/aarum.jpg" alt="">
                     </picture>
                     <picture class="multimedia-d_media_img--2">
-                        <img class="border-white" src="img/familien_8429.jpg" alt="">
+                        <img class="border-white" src="img/mod/aarum-pynter-kake.jpg" alt="">
                     </picture>
 
                     <div class="multimedia-d_excerpt quote--m">
@@ -304,18 +304,18 @@
                 </div>
                 <div class="multimedia-e_media">
                     <picture class="multimedia-e_media_image slides">
-                        <img src="img/foto-vinner-closeup_8452.jpg" alt="">
+                        <img src="img/mod/fotovinner-2.jpg" alt="">
                     </picture>
                     <picture class="multimedia-e_media_image slides">
-                        <img src="img/foto-vinner-svein.jpg" alt="">
+                        <img src="img/mod/fotovinner-1.jpg" alt="">
                     </picture>
                     <picture class="multimedia-e_media_image slides">
-                        <img src="img/foto-vinner-2_8450.jpg" alt="">
+                        <img src="img/mod/fotovinner-4.jpg" alt="">
                     </picture>
 
-                    <div class="number">
+                   <!--<div class="number">
                         1/2
-                    </div>
+                    </div>--> 
                     <a class="next" onclick="plusSlides(1)">&#10095;</a>
                 </div>
             </div>
@@ -457,30 +457,30 @@
         <div class="image-grid-a zindex">
             <div class="image-grid-a_media bg-white">
                 <picture class="image-grid-a_media_img--1">
-                    <img src="img/bar-mat_8427.jpg" alt="">
+                    <img src="img/mod/mat.jpg" alt="">
                 </picture>
                 <picture class="image-grid-a_media_img--2">
-                    <img src="img/jukebox-sanger_8446.jpg" alt=""></picture>
+                    <img src="img/mod/juke-sanger.jpg" alt=""></picture>
                 <picture class="image-grid-a_media_img--3">
-                    <img src="img/diner-flagg_8421.jpg" alt=""></picture>
+                    <img src="img/mod/scene.jpg" alt=""></picture>
                 <picture class="image-grid-a_media_img--4">
-                    <img src="img/foto-vinner-svein.jpg" alt=""></picture>
+                    <img src="img/mod/fotovinner-1.jpg" alt=""></picture>
                 <picture class="image-grid-a_media_img--6">
-                    <img src="img/familien-far_8431.jpg" alt=""></picture>
+                    <img src="img/mod/familien-far.jpg" alt=""></picture>
                 <picture class="image-grid-a_media_img--7">
-                    <img src="img/jukebox_8391.jpg" alt=""></picture>
+                    <img src="img/mod/skull.jpg" alt=""></picture>
                 <picture class="image-grid-a_media_img--8">
-                    <img src="img/magasiner_8395.jpg" alt=""></picture>
+                    <img src="img/mod/bil-pickup.jpg" alt=""></picture>
                 <picture class="image-grid-a_media_img--9">
-                    <img src="img/felger-vegg-2_8385.jpg" alt=""></picture>
+                    <img src="img/mod/biler-bak.jpg" alt=""></picture>
                 <picture class="image-grid-a_media_img--10">
-                    <img src="img/familien-2_8432.jpg" alt=""></picture>
+                    <img src="img/mod/familien-2.jpg" alt=""></picture>
                 <picture class="image-grid-a_media_img--11">
-                    <img src="img/felger-vegg-2_8385.jpg" alt=""></picture>
+                    <img src="img/mod/felger.jpg" alt=""></picture>
                 <picture class="image-grid-a_media_img--12">
-                    <img src="img/diner-flagg_8421.jpg" alt=""></picture>
+                    <img src="img/mod/diner-flagg.jpg" alt=""></picture>
                 <picture class="image-grid-a_media_img--13">
-                    <img src="img/diner-tom_8387.jpg" alt=""></picture>
+                    <img src="img/mod/felger.jpg" alt=""></picture>
             </div>
         </div>
 
