--- a/index.html
+++ b/index.html
@@ -29,18 +29,20 @@
 
     <div class="container">
 
+        <!-- Loading -->
         <div class="page-loader"></div>
 
+        <!-- Headline -->
         <header class="header_landing" id="header_landing">
             <div class="header_landing_grid" id="header_landing_grid">
-                <video class="header_landing_video" autoplay muted loop src="video/placeholder/Orchestra.mp4"></video>
+                <video class="header_landing_video" autoplay muted loop src="video/juke-2.mp4"></video>
                 <img src="img/mod/aarum.jpg" alt="" class="header_landing_img--1">
                 <img src="img/mod/bar-front.jpg" alt="" class="header_landing_img--2">
                 <img src="img/mod/familien-2.jpg" alt="" class="header_landing_img--3">
             </div>
             <div class="header_landing_text">
                 <h1 class="header_landing_text_headline headline--xl">
-                    STREET & CRUISIN
+                    Amcar Halden
                 </h1>
                 <h2 class="header_landing_text_subtitle headline--s">
                     Hver onsdag møtes unge og gamle til quiz, kake og masse bilprat
@@ -56,6 +58,7 @@
             </div>
         </header>
 
+        <!-- Intro -->
         <div class="introduction bg-white">
             <p class="introduction_text text--m">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio dolores impedit tempora repudiandae
@@ -68,7 +71,7 @@
 
         <div class="multimedia-f fill-page">
             <div class="multimedia-f_text text--s  bg-black">
-                <p class="multimedia-f_text_p text--m">
+                <p class="multimedia-f_text_p text--s">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio dolores impedit tempora
                     repudiandae
                 </p>
@@ -84,7 +87,8 @@
             </div>
         </div>
 
-        <div class="multimedia-a bg-white fill-page">
+        <!-- Nils Petter -->
+        <div class="multimedia-a bg-white fill-page" id="multimedia-a">
             <div class="multimedia-a_media">
                 <picture class="multimedia-a_media_img--1">
                     <img class="border-white" src="img/mod/nils-petter.jpg" alt="">
@@ -119,8 +123,9 @@
             </div>
         </div>
 
-        <div class="video-a">
-            <video src="video/placeholder/Orchestra.mp4" controls>
+        <!-- Nils Petter video-intervju -->
+        <div class="video-a" id="video-a">
+            <video class="video" id="video" src="video/klubben.mp4" controls>
                 <source src="movie.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
@@ -150,6 +155,7 @@
 
         </div>-->
 
+        <!-- Map -->
         <div class="multimedia-c bg-white fill-page">
             <div class="multimedia-c_media">
                 <picture class="multimedia-c_media_image">
@@ -174,6 +180,7 @@
             </div>
         </div>
 
+        <!-- Familien -->
         <div class="multimedia-b fill-page">
             <div class="multimedia-b_excerpt quote--l">
                 <p class="multimedia-b_excerpt_p">
@@ -183,30 +190,25 @@
                 <h1 class="multimedia-b_text_headline headline--m">Ikke Donald</h1>
                 <p class="multimedia-b_text_p">
                     <p class="multimedia-b_text_p">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio dolores impedit tempora
-                        repudiandae
-                        aliquam molestiae repellendus, deserunt at id porro molestias. Aspernatur vero quas eveniet
-                        molestiae
-                        quaerat magnam recusandae repellat?
+                        Med nesa dypt i et bil-magasin sitter Severin, en av klubbens yngste stamgjester.
+                        Ikledd svart skinnjakke og caps som fronter “Aarnes amerikanske bildeler” forteller han at han
+                        er den eneste han kjenner på sin alder som er så opptatt av amerikanske biler, men han synes
+                        det er greit.
+
                     </p>
                     <p class="multimedia-b_text_p">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio dolores impedit tempora
-                        repudiandae
-                        aliquam molestiae repellendus, deserunt at id porro molestias. Aspernatur vero quas eveniet
-                        molestiae
-                        quaerat magnam recusandae repellat?
+                        Pappa Ole Willy forteller at sønnen bladde i bilblader allerede i småbarns-alder. Han forteller
+                        at han kjøpte barnebøker og Donald Duck-blader, men det ble nesten aldri rørt.
                     </p>
                     <p class="multimedia-b_text_p">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio dolores impedit tempora
-                        repudiandae
-                        aliquam molestiae repellendus, deserunt at id porro molestias. Aspernatur vero quas eveniet
-                        molestiae
-                        quaerat magnam recusandae repellat?
+                        Fra båsen ved siden av spøkes det at Amcar er en sykdom man aldri blir kvitt. Ole Willy ler
+                        nikkende.
                     </p>
                 </p>
             </div>
         </div>
 
+        <!-- TEKST -->
         <div class="text-a bg-white">
             <div class="text-a_text text--s">
                 <h1 class="text-a_text headline--m">
@@ -243,6 +245,7 @@
             </div>
         </div>
 
+        <!-- Kjersti Aarum -->
         <div class="multimedia-d fill-page zindex">
             <div class="multimedia-d_media">
                 <picture class="multimedia-d_media_img--1">
@@ -260,75 +263,68 @@
             <div class="multimedia-d_text bg-black text--s">
                 <h1 class="multimedia-d_text_p headline--m">Chevy fra Ebay</h1>
                 <p class="multimedia-d_text_p">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio dolores impedit tempora
-                    repudiandae
-                    aliquam molestiae repellendus, deserunt at id porro molestias. Aspernatur vero quas eveniet
-                    molestiae
-                    quaerat magnam recusandae repellat?
+                    En av ildsjelene bak onsdagskafeen er Kjersti Aarum. Når vi møter henne står hun ved et biljardbord
+                    og pynter diverse kaker hun har bakt hjemme, noen til salgs, andre til premier som skal gis ut i
+                    løpet av kvelden.
                 </p>
                 <p class="multimedia-d_text_p">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio dolores impedit tempora
-                    repudiandae
-                    aliquam molestiae repellendus, deserunt at id porro molestias. Aspernatur vero quas eveniet
-                    molestiae
-                    quaerat magnam recusandae repellat?
+                    For henne startet eventyret da ektemannen Tom kjøpte seg veteran-bil i 2005, og to år
+                    senere hadde hun sin egen ‘68 Chevrolet Chevy Impala kjøpt gjennom Ebay.
                 </p>
                 <p class="multimedia-d_text_p">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio dolores impedit tempora
-                    repudiandae
-                    aliquam molestiae repellendus, deserunt at id porro molestias. Aspernatur vero quas eveniet
-                    molestiae
-                    quaerat magnam recusandae repellat?
+                    Hun er stolt over miljøet i klubben, og presisterer at her er alle velkommen.
                 </p>
 
             </div>
         </div>
 
-
+        <!-- Fotokonkurransen -->
         <div class="multimedia-e bg-white zindex  fill-page">
             <div class="multimedia-e_text text--s">
                 <h1 class="multimedia-e_text_h1 headline--m">
-                    Årets beste foto
+                    Chrome and Curves
                 </h1>
                 <p class="multimedia-e_text_p">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio dolores impedit tempora
-                    repudiandae
-                    aliquam molestiae repellendus, deserunt at id porro molestias. Aspernatur vero quas eveniet
-                    molestiae
-                    quaerat magnam recusandae repellat?
+                    I “ute-sesongen” har det i år blitt holdt fotokonkurransen “Chrome and Curves”, hvor man
+                    kunne bidra med motiv av amerikanske biler i alle varianter.
                 </p>
                 <p class="multimedia-e_text_p">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio dolores impedit tempora
-                    repudiandae
-                    aliquam molestiae repellendus, deserunt at id porro molestias. Aspernatur vero quas eveniet
-                    molestiae
-                    quaerat magnam recusandae repellat?
+                    Fra mai til september har styret kåret ukesvinnere som på slutten av sesongen kjempet om tittelen
+                    “Årets Blinkskudd” og en premie på 2000 kroner.
                 </p>
                 <p class="multimedia-e_text_p">
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio dolores impedit tempora
-                    repudiandae
-                    aliquam molestiae repellendus, deserunt at id porro molestias. Aspernatur vero quas eveniet
-                    molestiae
-                    quaerat magnam recusandae repellat?
+                    &ndash; For det meste har det ikke vært profesjonelle fotografer som sender inn bidrag, men
+                    privatpersoner som enter tar bilder med mobilen eller er “hobbyfotografer”, sier Nils Petter
+                </p>
+                <p class="multimedia-e_text_p">
+                    Vinneren av årets fotokonkurranse ble Svein at Hurum.
+                </p>
+                <p class="multimedia-e_text_p">
+                    Nils Petter syns det fungerte fint og vurderer sterkt å gjøre konkurransen en årlig event.
                 </p>
             </div>
             <div class="multimedia-e_media">
                 <picture class="multimedia-e_media_image slides">
                     <img src="img/mod/fotovinner-2.jpg" alt="">
                 </picture>
-                
+
                 <picture class="multimedia-e_media_image slides">
                     <img src="img/mod/fotovinner-1.jpg" alt="">
                 </picture>
                 <picture class="multimedia-e_media_image slides">
-                   
+
                     <img src="img/mod/fotovinner-4.jpg" alt="">
                 </picture>
 
                 <div class="number headline--l">1 / 3</div>
                 <div class="number headline--l">2 / 3</div>
                 <div class="number headline--l">3 / 3</div>
-                <a class="multimedia-e_media_next" onclick="plusSlides(1)">&#10095;</a>
+
+                <div class="multimedia-e_media_next">
+                    <a class="multimedia-e_media_next_a" onclick="plusSlides(1)">&#10095;</a>
+                </div>
+
+
 
             </div>
         </div>
@@ -354,10 +350,25 @@
             </div>
         </div>-->
 
+        <!-- TEKST -->
+        <div class="text-b zindex bg-white">
+            <div class="text-b_text text--s">
+                <h1 class="headline--l">Fiskebrygga</h1>
+                <p class="text-b_text_p">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio dolores impedit tempora
+                    repudiandae
+                    aliquam molestiae repellendus, deserunt at id porro molestias. Aspernatur vero quas eveniet
+                    molestiae
+                    quaerat magnam recusandae repellat?
+                </p>
+            </div>
+        </div>
+
+        <!-- Scroll-seksjon -->
         <div class="multimedia-scroll" id="multimedia-scroll">
             <div class="multimedia-scroll_media not-visible ease" id="multimedia-scroll_media">
                 <div class="multimedia-scroll_media_img--1 fade-out sticky ease" id="img-1">
-                    <img src="img/placeholder/kart.png" alt="">
+                    <img src="img/placeholder/fiskebrygga-kart.png" alt="">
                 </div>
                 <div class="multimedia-scroll_media_img--2 fade-out sticky ease" id="img-2">
                     <img src="img/placeholder/landssnitt7.png" alt="">
@@ -388,6 +399,7 @@
 
         </div>
 
+        <!-- TEKST -->
         <div class="text-a bg-white zindex">
             <div class="text-a_text text--s">
                 <h1 class="headline--s">Headline</h1>
