mediaqueries ferdig + animasjon

--- a/index.html
+++ b/index.html
@@ -88,13 +88,13 @@
         </div>
 
         <!-- Nils Petter -->
-        <div class="multimedia-a bg-white fill-page" id="multimedia-a">
-            <div class="multimedia-a_media">
+        <div class="multimedia-a bg-white fill-page">
+            <div class="multimedia-a_media" id="multimedia-a_media">
                 <picture class="multimedia-a_media_img--1">
-                    <img class="border-white" src="img/mod/nils-petter.jpg" alt="">
+                    <img class="multimedia-a_media_img--2-img" src="img/mod/nils-petter.jpg" alt="">
                 </picture>
                 <picture class="multimedia-a_media_img--2">
-                    <img class="border-white" src="img/mod/nils-petter-bak.jpg" alt="">
+                    <img class="" src="img/mod/nils-petter-bak.jpg" alt="">
                 </picture>
             </div>
             <div class="multimedia-a_text text--s">
@@ -353,7 +353,7 @@
         <!-- TEKST -->
         <div class="text-b zindex bg-white">
             <div class="text-b_text text--s">
-                <h1 class="headline--l">Fiskebrygga</h1>
+                <h1 class="headline--m">Fiskebrygga</h1>
                 <p class="text-b_text_p">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio dolores impedit tempora
                     repudiandae
@@ -380,20 +380,18 @@
 
             <div class="multimedia-scroll_text text--m">
 
-                <div class="multimedia-scroll_text_quoteblock multimedia-scroll_text_quoteblock--1">
+                <div class="multimedia-scroll_text_quoteblock multimedia-scroll_text_quoteblock--1"></div>
 
+                <div class="multimedia-scroll_text_quoteblock">
+                    <p><span>orem ipsum dolor sit amet consectetur adipisicing elit. 1</span></p>
                 </div>
 
                 <div class="multimedia-scroll_text_quoteblock">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 1</p>
+                    <p><span>orem ipsum dolor sit amet consectetur adipisicing elit. 1</span></p>
                 </div>
 
                 <div class="multimedia-scroll_text_quoteblock">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 2</p>
-                </div>
-
-                <div class="multimedia-scroll_text_quoteblock">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 3</p>
+                    <p><span>orem ipsum dolor sit amet consectetur adipisicing elit. 1</span></p>
                 </div>
             </div>
 
@@ -402,7 +400,7 @@
         <!-- TEKST -->
         <div class="text-a bg-white zindex">
             <div class="text-a_text text--s">
-                <h1 class="headline--s">Headline</h1>
+                <h1 class="headline--m">Headline</h1>
                 <p class="text-a_text_p">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio dolores impedit tempora
                     repudiandae
@@ -466,7 +464,7 @@
 
         <div class="text-a bg-white zindex">
             <div class="text-a_text text--s">
-                <h1 class="headline--s">Takk til</h1>
+                <h1 class="headline--m">#Amcar</h1>
                 <p class="text-a_text_p">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio dolores impedit tempora
                     repudiandae
@@ -488,22 +486,22 @@
                     <img src="img/mod/scene.jpg" alt=""></picture>
                 <picture class="image-grid-a_media_img--4">
                     <img src="img/mod/fotovinner-1.jpg" alt=""></picture>
-                <picture class="image-grid-a_media_img--6">
+                <picture class="image-grid-a_media_img--5">
+                    <img src="img/mod/skull.jpg" alt=""></picture>
+                <picture class="image-grid-a_media_img-6">
                     <img src="img/mod/familien-far.jpg" alt=""></picture>
                 <picture class="image-grid-a_media_img--7">
-                    <img src="img/mod/skull.jpg" alt=""></picture>
-                <picture class="image-grid-a_media_img--8">
                     <img src="img/mod/bil-pickup.jpg" alt=""></picture>
-                <picture class="image-grid-a_media_img--9">
+                <picture class="image-grid-a_media_img--8">
                     <img src="img/mod/biler-bak.jpg" alt=""></picture>
+                <picture class="image-grid-a_media_img--9">
+                    <img src="img/mod/skull.jpg" alt=""></picture>
                 <picture class="image-grid-a_media_img--10">
                     <img src="img/mod/familien-2.jpg" alt=""></picture>
                 <picture class="image-grid-a_media_img--11">
                     <img src="img/mod/felger.jpg" alt=""></picture>
                 <picture class="image-grid-a_media_img--12">
                     <img src="img/mod/diner-flagg.jpg" alt=""></picture>
-                <picture class="image-grid-a_media_img--13">
-                    <img src="img/mod/felger.jpg" alt=""></picture>
             </div>
         </div>
 
